--- a/Projet/Jeu/Graphics/MainWindow.xaml
+++ b/Projet/Jeu/Graphics/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:Graphics"
-        Title="MainWindow" Height="350" Width="525">
+        Title="SmallWorld" Height="350" Width="525">
     <ScrollViewer>
         <local:MapView />
     </ScrollViewer>
