--- a/Projet/Jeu/Graphics/MainWindow.xaml
+++ b/Projet/Jeu/Graphics/MainWindow.xaml
@@ -2,8 +2,22 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:Graphics"
-        Title="SmallWorld" Height="350" Width="525">
+        Title="SmallWorld" Height="500" Width="500">
     <ScrollViewer>
-        <local:MapView />
+        <Grid VerticalAlignment="Bottom">
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition Height="20"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <!-- <local:MapView Grid.Row="0"/> -->
+            <Button Grid.Row="1" Grid.Column="2" Content="Next turn" Height="20" Width="100" Click="ClickNext"/>
+            <Button Grid.Row="1" Grid.Column="1" Content="Save game" Height="20" Width="100" Click="ClickSave"/>
+            <Button Grid.Row="1" Grid.Column="0" Content="Load a game" Height="20" Width="100" Click="ClickLoad"/>
+        </Grid>
     </ScrollViewer>
 </Window>
