--- a/Projet/Jeu/Graphics/MainWindow.xaml
+++ b/Projet/Jeu/Graphics/MainWindow.xaml
@@ -3,11 +3,19 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:Graphics"
         Title="SmallWorld" Height="500" Width="500">
+    <Window.Background>
+        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+            <GradientStop Color="Black" Offset="0"/>
+            <GradientStop Color="#FFC17A33" Offset="1"/>
+        </LinearGradientBrush>
+    </Window.Background>
     <ScrollViewer>
         <Grid VerticalAlignment="Bottom">
             <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition Height="20"/>
+                <RowDefinition Height="150" />
+                <RowDefinition Height="25" />
+                <RowDefinition Height="131"/>
+                <RowDefinition Height="10*" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
@@ -15,9 +23,13 @@
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <!-- <local:MapView Grid.Row="0"/> -->
-            <Button Grid.Row="1" Grid.Column="2" Content="Next turn" Height="20" Width="100" Click="ClickNext"/>
-            <Button Grid.Row="1" Grid.Column="1" Content="Save game" Height="20" Width="100" Click="ClickSave"/>
-            <Button Grid.Row="1" Grid.Column="0" Content="Load a game" Height="20" Width="100" Click="ClickLoad"/>
+            <!--
+            <Button Grid.Row="3" Grid.Column="2" Content="Next turn" Click="ClickNext" Margin="30,0,29,0"/>
+            <Button Grid.Row="3" Grid.Column="1" Content="Save game" Click="ClickSave" Margin="29,0"/>
+            <Button Grid.Row="3" Grid.Column="0" Content="Load a game" Click="ClickLoad" Margin="29,0"/> -->
+            <Button Grid.Row="1" Grid.Column="0" Content="Load game" Click="ClickLoadGame" Margin="29,0"/>
+            <Button Grid.Row="1" Grid.Column="2" Content="Create new game" Click="ClickNewGame" Margin="29,0"/>
+            <TextBlock Grid.Row="0" Grid.Column="1" Text="Small World" TextAlignment="Center" FontSize="36" />
         </Grid>
     </ScrollViewer>
 </Window>
