--- a/Projet/Jeu/Graphics/ecranAccueil.xaml
+++ b/Projet/Jeu/Graphics/ecranAccueil.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="ecranAccueil" Height="300" Width="300" Background="White" BorderBrush="#FFFFFCFC" Foreground="Black">
     <Grid>
-        <TextBlock Text="Selectionnez la taille de la carte : " Margin="59,76,59,165" />
+        <TextBlock Text="Sélectionnez la taille de la carte : " Margin="59,76,59,165" />
         <ComboBox Name="comboBoxTaille" HorizontalAlignment="Left" Margin="86,122,0,0" VerticalAlignment="Top" Width="120">
             <ComboBoxItem IsSelected="True">petite (6x6)</ComboBoxItem>
             <ComboBoxItem>moyenne (10x10)</ComboBoxItem>
