--- a/Projet/Jeu/Graphics/App.xaml
+++ b/Projet/Jeu/Graphics/App.xaml
@@ -7,5 +7,16 @@
         <BitmapImage x:Key="MountainCell" CreateOptions="IgnoreImageCache" CacheOption="OnLoad" UriSource="./textures/mountain.png"/>
         <BitmapImage x:Key="DesertCell" CreateOptions="IgnoreImageCache" CacheOption="OnLoad" UriSource="./textures/desert.png"/>
         <BitmapImage x:Key="ForestCell" CreateOptions="IgnoreImageCache" CacheOption="OnLoad" UriSource="./textures/forest.png"/>
+        <BitmapImage x:Key="SpaceCell" CreateOptions="IgnoreImageCache" CacheOption="OnLoad"/>
+
+        <Style TargetType="Button">
+            <Setter Property="VerticalAlignment" Value="Top" />
+            <Setter Property="Width" Value="100" />
+            <Setter Property="Height" Value="40" />
+            <Setter Property="Foreground" Value="White" />
+            <Setter Property="FontFamily" Value="/WpfSmallWorld;component/Resources/#Trajan Pro" />
+            <Setter Property="HorizontalAlignment" Value="Center" />
+            <Setter Property="VerticalAlignment" Value="Top" />
+        </Style>
     </Application.Resources>
 </Application>
