--- a/Projet/Jeu/Graphics/MapToPlay.xaml
+++ b/Projet/Jeu/Graphics/MapToPlay.xaml
@@ -4,6 +4,6 @@
         xmlns:local="clr-namespace:Graphics"
         Title="MapToPlay" Height="300" Width="300">
     <Grid Name="gridMap">
-        
+        <Grid x:Name="mapGrid" HorizontalAlignment="Center" Grid.Column="1" Margin="392.664,375,437,375" />
     </Grid>
 </Window>
