--- a/Projet/Jeu/Graphics/Cellule.xaml
+++ b/Projet/Jeu/Graphics/Cellule.xaml
@@ -4,8 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-        <Grid Name="grid">
+             d:DesignHeight="65" d:DesignWidth="58">
+    <Grid Name="grid" Loaded="OnCellViewLoaded">
         <Grid.Resources>
             <ImageBrush x:Key="BrushDesertCell" ImageSource="{DynamicResource DesertCell}" />
             <ImageBrush x:Key="BrushForestCell" ImageSource="{DynamicResource ForestCell}" />
