--- a/Projet/Jeu/Graphics/App.xaml
+++ b/Projet/Jeu/Graphics/App.xaml
@@ -2,8 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Graphics"
-             StartupUri="MainWindow.xaml"
-             xmlns:vsm="clr-namespace:System.Windows;assembly=System.Windows">
+             StartupUri="MainWindow.xaml">
 
     <Application.Resources>
         <BitmapImage x:Key="backgroundImage" CreateOptions="IgnoreImageCache" CacheOption="OnLoad" UriSource="./elements/background.jpg"/>
