--- a/Projet/Jeu/Graphics/MapUnitView.xaml
+++ b/Projet/Jeu/Graphics/MapUnitView.xaml
@@ -1,8 +1,12 @@
 ﻿<UserControl x:Class="Graphics.MapUnitView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Height="60" Width="60"
-        xmlns:local="clr-namespace:Graphics">
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+        mc:Ignorable="d" 
+        xmlns:local="clr-namespace:Graphics"
+        Loaded="OnUnitLoaded"
+        d:DesignHeight="60" d:DesignWidth="60">
 
     <Grid Name="grid" IsHitTestVisible="False">
         <!-- Animates the rectangle's opacity. -->
