--- a/Projet/Jeu/Graphics/MainWindow.xaml
+++ b/Projet/Jeu/Graphics/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="SmallWorld" Height="500" Width="500" WindowState="Maximized">
-    
+
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
             <GradientStop Color="Black" Offset="0"/>
@@ -10,25 +10,21 @@
         </LinearGradientBrush>
     </Window.Background>
     <ScrollViewer>
-        <Grid VerticalAlignment="Bottom">
+        <Grid VerticalAlignment="Bottom" Height="469" Width="492">
             <Grid.RowDefinitions>
                 <RowDefinition Height="150" />
-                <RowDefinition Height="25" />
-                <RowDefinition Height="131"/>
-                <RowDefinition Height="10*" />
+                <RowDefinition Height="180" />
+                <RowDefinition Height="92"/>
+                <RowDefinition />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
+                <ColumnDefinition Width="115*" />
+                <ColumnDefinition Width="250*" />
+                <ColumnDefinition Width="127*" />
             </Grid.ColumnDefinitions>
-            <!--
-            <Button Grid.Row="3" Grid.Column="2" Content="Next turn" Click="ClickNext" Margin="30,0,29,0"/>
-            <Button Grid.Row="3" Grid.Column="1" Content="Save game" Click="ClickSave" Margin="29,0"/>
-            <Button Grid.Row="3" Grid.Column="0" Content="Load a game" Click="ClickLoad" Margin="29,0"/> -->
-            <Button Grid.Row="1" Grid.Column="0" Content="Load game" Click="ClickLoadGame" Margin="29,0"/>
-            <Button Grid.Row="1" Grid.Column="2" Content="Create new game" Click="ClickNewGame" Margin="29,0"/>
-            <TextBlock Grid.Row="0" Grid.Column="1" Text="Small World" TextAlignment="Center" FontSize="36" />
+           
+            <Button Grid.Row="2" Grid.Column="1" Content="Create new game" Click="ClickNewGame" Margin="10,13,10,10"/>
+            <TextBlock Grid.Row="1" Text="Small World" TextAlignment="Center" FontSize="36" Margin="0,10,0,111" Grid.Column="1" />
         </Grid>
     </ScrollViewer>
 </Window>
